Fixed scrolling issue on mobile device

--- a/myfirstapp/src/App.module.css
+++ b/myfirstapp/src/App.module.css
@@ -10,7 +10,6 @@
         padding: 0;
         height: 100%;
         background: #2d6693;
-        overflow-y: hidden;
         font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
             Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
             sans-serif;
